<resources>
    <string name="app_name">Shiny Pokedex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="kanto">Kanto</string>
    <string name="demo">Demo</string>
    <string name="johto">Johto</string>
    <string name="hoenn">Hoenn</string>
    <string name="sinnoh">Sinnoh</string>
    <string name="unova">Unova</string>
    <string name="kalos">Kalos</string>
    <string name="alola">Alola</string>
    <string name="galar">Galar</string>
    <string name="pokemon_sprite">Pokemon sprite</string>
</resources>